--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -15,6 +15,8 @@
                              displayName="Version Bumps Settings"
                              parentId="tools"
                              nonDefaultProject="true"/>
+        <projectService serviceImplementation="fr.o80.version.data.VersionStateServiceImpl"
+                        serviceInterface="fr.o80.version.data.VersionStateService" />
     </extensions>
 
     <actions>
